--- a/index.html
+++ b/index.html
@@ -7,17 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    asd
 </body>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/7.21.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="/__/firebase/7.21.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
 
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
-
-
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyDUb1aM6aZ-1fWgr42CyaxTYZziCKX6cEg",
+    authDomain: "nodejsqq.firebaseapp.com",
+    databaseURL: "https://nodejsqq.firebaseio.com",
+    projectId: "nodejsqq",
+    storageBucket: "nodejsqq.appspot.com",
+    messagingSenderId: "532371007987",
+    appId: "1:532371007987:web:36ce258583f45a6d458a86",
+    measurementId: "G-NMRNYLR7P7"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+//   var database = firebase.database();
+//   console.log(database)
+  console.log(firebase)
+  firebase.database().ref().set('hi')
+</script>
 </html>
