--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    asd
+  <input id="txt" type="text" placeholder="請輸入內容..">
+  <input type="button" id="send" value="送出">
+  <ul id="list">
+
+  </ul>
 </body>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase.js"></script>
@@ -52,6 +56,22 @@
   //下面兩個語法一樣
   var todos = firebase.database().ref('todos')
   var todos = firebase.database().ref().child('todos')
+
+
+
+
+  var txt = document.getElementById('txt');
+    var send = document.getElementById('send');
+    var list = document.getElementById('list')
+    // todos
+    var todos = firebase.database().ref('todos');
+
+    // 按送出按鈕，可以寫入到資料庫
+    send.addEventListener('click',function(e){
+        console.log(txt.value);
+        todos.push({content: txt.value});
+    })
+    
 
 </script>
 </html>
