--- a/index.html
+++ b/index.html
@@ -81,7 +81,14 @@
         }
         list.innerHTML = str;
     })
-    
+    // 刪除邏輯
+    list.addEventListener('click',function(e){
+        
+        if(e.target.nodeName=="LI"){
+            var key = e.target.dataset.key;
+            todos.child(key).remove();
+        }
+    })
 
 </script>
 </html>
