firebase orderByChild() sort

--- a/sort_orderByChild.html
+++ b/sort_orderByChild.html
@@ -38,57 +38,48 @@
   firebase.analytics();
 //   var database = firebase.database();
 //   console.log(database)
-  console.log(firebase)
-  firebase.database().ref().set('hi')
-
-  var data = {'asd':'1','zxc':'2'}
-  firebase.database().ref().set(data)
-  //修改裡面的資料
-  firebase.database().ref('asd/asd1').set('QQ')
-  //once只執行一次（資料庫更動的時候前端不會更動） 
-  //on隨時監控（跟once一樣的寫法 不過在資料庫更動的時候前端也會更動，比較適合用來作聊天室）
-  //快照
-  firebase.database().ref('myName').set('QQQQ')
-  var myName = firebase.database().ref('myName');
-  myName.once('value',function(snapshot){
-    alert(snapshot.val())
-  })
-  //下面兩個語法一樣
-  var todos = firebase.database().ref('todos')
-  var todos = firebase.database().ref().child('todos')
-
-
-
-
-  var txt = document.getElementById('txt');
-    var send = document.getElementById('send');
-    var list = document.getElementById('list')
-    // todos
-    var todos = firebase.database().ref('todos');
-
-    // 按送出按鈕，可以寫入到資料庫
-    send.addEventListener('click',function(e){
-        console.log(txt.value);
-        todos.push({content: txt.value});
-    })
-    // 顯示內容出來
-    todos.on('value',function(snapshot){
-        var str = '';
-        var data = snapshot.val();
-        for(var item in data){
-            str+='<li data-key="'+ item +'">'+data[item].content+'</li>';
-            
+var people = {
+        "mike": {
+          "height" : 4,
+          "length" : 12.5,
+          "weight": 5000
+        },
+        "casper": {
+          "height" : 3,
+          "length" : 9,
+          "weight" : 2500
+        },
+        "bob": {
+          "height": "dalse",
+          "length" : false,
+          "weight" : 2500
+        },
+        "john": {
+          "height" : true,
+          "length" : 9,
+          "weight" : 2500
         }
-        list.innerHTML = str;
-    })
-    // 刪除邏輯
-    list.addEventListener('click',function(e){
-        
-        if(e.target.nodeName=="LI"){
-            var key = e.target.dataset.key;
-            todos.child(key).remove();
+        ,
+        "josh": {
+          "height" : false,
+          "length" : 9,
+          "weight" : 2500
+        },
+        'boss':{
+          "length": 3
+        },
+        'frank':{
+          height:{'aaa':1}
         }
+      };
+    firebase.database().ref('people').set(people);
+    var peopleRef = firebase.database().ref('people');
+    // 路徑>>排序('屬性')>>讀取> forEach 依序撈出資料
+    peopleRef.orderByChild('height').once('value',function(snapshot){
+        snapshot.forEach(function(item){
+            console.log(item.val());
+        })
+        // console.log(snapshot.val());
     })
-
 </script>
 </html>
